# bbcat-fileio

./: .gitignore  CMakeLists.txt  Makefile.am  README  bbcat-fileio-uninstalled.pc.in  bbcat-fileio.pc.in  configure.ac
cmake_modules/: FindTinyXML.cmake
debian/: changelog  control
examples/: CMakeLists.txt  README  adm-to-json.cpp  combine_wavs.cpp  create-adm.cpp  dolby.xml  gentestfile.cpp  load-xml.cpp  makefile  map-adm-bwf.cpp  modify-adm-bwf.cpp  play-metadata.cpp  read-adm-bwf.cpp  read_chunks.cpp  udp-demo.cpp  wav2bwav.cpp  write-4gb-file.cpp  write-adm-bwf.cpp  write-separate-adm.cpp
share/: licences.txt  standarddefinitions.xml
src/: ADMAudioFileSamples.cpp  ADMAudioFileSamples.h  ADMRIFFFile.cpp  ADMRIFFFile.h  CMakeLists.txt  ConfigVersion.cmake.in  Makefile.am  PlaybackTracker.h  Playlist.cpp  Playlist.h  RIFFChunk.cpp  RIFFChunk.h  RIFFChunk_Definitions.h  RIFFChunks.cpp  RIFFChunks.h  RIFFFile.cpp  RIFFFile.h  SoundFileAttributes.cpp  SoundFileAttributes.h  SoundObjectFile.cpp  SoundObjectFile.h  TinyXMLADMData.cpp  TinyXMLADMData.h  XMLADMData.cpp  XMLADMData.h  findselfregisteringobjects.sh  register.cpp  register.h  version.cpp.in
test/: CMakeLists.txt  Makefile.am  admxmltest.cpp  test1.xml  test2.xml  test3.xml  testbase.cpp
